--- a/infra/k8s/apps/frontend/base/service.yaml
+++ b/infra/k8s/apps/frontend/base/service.yaml
@@ -3,9 +3,20 @@ kind: Service
 metadata:
   name: ielts-frontend
   namespace: ielts-frontend
+  labels:
+    app: ielts-frontend
+    version: v1
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "3000"
+    prometheus.io/path: "/api/health"
 spec:
-  selector: { app: ielts-frontend }
+  type: ClusterIP
+  selector: 
+    app: ielts-frontend
   ports:
     - name: http
       port: 80
       targetPort: 3000
+      protocol: TCP
+  sessionAffinity: None
