--- a/infra/k8s/apps/frontend/overlays/dev/kustomization.yaml
+++ b/infra/k8s/apps/frontend/overlays/dev/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - ../../base
 images:
-  - name: your-dockerhub-user/ielts-frontend
-    newName: your-dockerhub-user/ielts-frontend
-    newTag: dev-001
+  - name: knguyendev/ielts-frontend
+    newName: knguyendev/ielts-frontend
+    newTag: latest
